# stm32

./: .gitignore  CLAUDE.md  README.md  meson.build  meson.options  meson_options.txt
include/stm32/: meson.build  stm32.hpp  stm32.hpp.in
include/stm32/common/: access.hpp  bittypes.hpp
include/stm32/mcus/: stm32f103.hpp
include/stm32/registers/: ac.hpp  adavancetim.hpp  adc.hpp  adc_common.hpp  adf.hpp  aes.hpp  aes1.hpp  afio.hpp  art.hpp  axi.hpp  bdma.hpp  bkp.hpp  can.hpp  cec.hpp  comp.hpp  comp1.hpp  cordic.hpp  crc.hpp  crs.hpp  cryp.hpp  dac.hpp  dac2.hpp  dbg.hpp  dbgmcu.hpp  dcache.hpp  dcb.hpp  dcmi.hpp  dfsdm.hpp  dlyb.hpp  dma.hpp  dma2d.hpp  dmamux.hpp  dsi.hpp  dsihost.hpp  ethernet.hpp  exti.hpp  fdcan.hpp  firewall.hpp  flash.hpp  fmac.hpp  (+80 more)
include/stm32/stm32c011/: adc.hpp  crc.hpp  dbg.hpp  dma.hpp  dmamux.hpp  exti.hpp  gpioa.hpp  gpiob.hpp  gpioc.hpp  gpiod.hpp  gpiof.hpp  i2c.hpp  iwdg.hpp  pwr.hpp  rcc.hpp  rtc.hpp  spi.hpp  stm32c011.hpp  syscfg.hpp  tim1.hpp  tim14.hpp  tim16.hpp  tim17.hpp  tim3.hpp  usart1.hpp  usart2.hpp  wwdg.hpp
include/stm32/stm32c031/: adc.hpp  crc.hpp  dbg.hpp  dma.hpp  dmamux.hpp  exti.hpp  gpioa.hpp  gpiob.hpp  gpioc.hpp  gpiod.hpp  gpiof.hpp  i2c.hpp  iwdg.hpp  pwr.hpp  rcc.hpp  rtc.hpp  spi.hpp  stm32c031.hpp  syscfg.hpp  tim1.hpp  tim14.hpp  tim16.hpp  tim17.hpp  tim3.hpp  usart1.hpp  usart2.hpp  wwdg.hpp
include/stm32/stm32f0x0/: adc.hpp  crc.hpp  dbgmcu.hpp  dma1.hpp  exti.hpp  flash.hpp  gpioa.hpp  gpiob.hpp  gpioc.hpp  gpiod.hpp  gpiof.hpp  i2c1.hpp  i2c2.hpp  iwdg.hpp  nvic.hpp  pwr.hpp  rcc.hpp  (+23 more)
(+16351 files in other folders)
